# chainreaper

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
bench/replays/: registry.yaml
bench/vuln-vault/: foundry.toml
chainreaper/: __init__.py  cli.py  config.py  keystore.py  models.py
chainreaper/agents/: __init__.py  emitters.py  factory.py  hooks.py  session.py  spec.py
chainreaper/backends/: __init__.py  anthropic_sdk.py  base.py  claude_cli.py
chainreaper/calibrate/: __init__.py  cases.py  defihacklabs.py  manifest.py  rediscovery.py  replay.py
chainreaper/config/: defaults.yaml
chainreaper/index/: build.py  slither_export.py  storagediff.py  store.py
chainreaper/orchestrator/: checkpoints.py  injectors.py  manifest.py  sequencer.py
chainreaper/recon/: __init__.py  dossier.py  dynamic_reach.py  invariants.py  prefilter.py  store.py
chainreaper/runtime/: campaign.py  exec.py  fork.py  logging.py
chainreaper/stages/: s0_discovery.py  s1_index.py  s2_recon.py  s3_prefilter.py  s4_hunt.py  s5_validate.py
chainreaper/targets/: __init__.py  immunefi_client.py  rpc_resolver.py  source_resolver.py
chainreaper/tools/: agent_tools.py  code_index.py  incident_catalog.py  invariant_catalog.py
docs/: IMPL-NOTES.md  IMPLEMENTATION-SPEC.md  blockchain-tooling-research.md
tests/: smoke_calibrate.py  smoke_campaign.py  smoke_campaign_fixture.py  smoke_crosscontract.py  smoke_emitters.py  smoke_fuzzers.py  smoke_governance.py  smoke_reachability.py  smoke_s0.py  smoke_s1.py  smoke_s2.py  smoke_s3.py  smoke_s4.py  smoke_s5.py  smoke_secrets.py  smoke_specresearch.py  smoke_stateful_attack.py  smoke_synthesis.py  smoke_threatresearch.py
tests/fixtures/: StatefulAttack.sol  immunefi_board.html  (+1 more)
tools_poc/: README.md  invariants.md
(+10 files in other folders)
